inc/MetalOS.h

struct Point2D
{
	size_t X;
	size_t Y;
};
struct Rectangle
{
	size_t X;
	size_t Y;
	size_t Width;
	size_t Height;

	bool Contains(const Point2D& p) const
	{
		if (p.X < X || p.X > (X + Width))
			return false;

		if (p.Y < Y || p.Y >(Y + Height))
			return false;

		return true;
	}
};
typedef void* Handle;
typedef size_t (*ThreadStart)(void* parameter);
typedef uint16_t VirtualKey;
enum class MessageType
{
	KeyEvent,
	MouseEvent,
	PaintEvent,
};
struct MessageHeader
{
	MessageType MessageType;
};
struct KeyEvent
{
	VirtualKey Key;
	struct
	{
		uint16_t Pressed : 1;
	} Flags;
};
struct MouseButtonState
{
	uint8_t LeftPressed : 1;
	uint8_t RightPressed : 1;
};
struct MouseEvent
{
	MouseButtonState Buttons;
	uint16_t XPosition;
	uint16_t YPosition;
};
struct PaintEvent
{
	Rectangle Region;
};
struct Message
{
	MessageHeader Header;
	union
	{
		KeyEvent KeyEvent;
		MouseEvent MouseEvent;
		PaintEvent PaintEvent;
	};
};
enum class WaitStatus
{
	None,
	Signaled,
	Timeout,
	Abandoned,
	//Failed conflicts with macro
};
enum class MemoryAllocationType
{
	Commit = 1,
	Reserve = 2,
	CommitReserve = Commit | Reserve,
};
enum class MemoryProtection
{
	PageRead = 1,
	PageWrite = 2,
	PageExecute = 4,
	PageReadWrite = PageRead | PageWrite,
	PageReadExecute = PageRead | PageExecute,
	PageReadWriteExecute = PageRead | PageWrite | PageExecute
};
struct Module
{
	void* Address;
	char Name[MaxModuleName];
};
struct ProcessEnvironmentBlock
{
	uint32_t ProcessId;
	uintptr_t BaseAddress;
	Module LoadedModules[MaxLoadedModules];
	size_t ModuleIndex;
};
struct ThreadEnvironmentBlock
{
	ThreadEnvironmentBlock* SelfPointer;
	ProcessEnvironmentBlock* PEB;
	ThreadStart ThreadStart;
	Handle Handle;
	void* Arg;
	uint32_t ThreadId;
	uint32_t Error;
};
enum class FilePointerMove
{
	Begin,
	Current,
	End
};
enum class SystemCallResult
{
	Success = 0,
	InvalidPointer,
	Failed
};