crates/metalos/src/metalos_bindings.rs

#[test]
fn bindgen_test_layout_MouseEvent() {
    assert_eq!(
        ::core::mem::size_of::<MouseEvent>(),
        6usize,
        concat!("Size of: ", stringify!(MouseEvent))
    );
    assert_eq!(
        ::core::mem::align_of::<MouseEvent>(),
        2usize,
        concat!("Alignment of ", stringify!(MouseEvent))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<MouseEvent>())).Buttons as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(MouseEvent),
            "::",
            stringify!(Buttons)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<MouseEvent>())).XPosition as *const _ as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(MouseEvent),
            "::",
            stringify!(XPosition)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<MouseEvent>())).YPosition as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(MouseEvent),
            "::",
            stringify!(YPosition)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct PaintEvent {
    pub Region: Rectangle,
}
#[test]
fn bindgen_test_layout_PaintEvent() {
    assert_eq!(
        ::core::mem::size_of::<PaintEvent>(),
        32usize,
        concat!("Size of: ", stringify!(PaintEvent))
    );
    assert_eq!(
        ::core::mem::align_of::<PaintEvent>(),
        8usize,
        concat!("Alignment of ", stringify!(PaintEvent))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<PaintEvent>())).Region as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(PaintEvent),
            "::",
            stringify!(Region)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct Message {
    pub Header: MessageHeader,
    pub __bindgen_anon_1: Message__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union Message__bindgen_ty_1 {
    pub KeyEvent: KeyEvent,
    pub MouseEvent: MouseEvent,
    pub PaintEvent: PaintEvent,
}
#[test]
fn bindgen_test_layout_Message__bindgen_ty_1() {
    assert_eq!(
        ::core::mem::size_of::<Message__bindgen_ty_1>(),
        32usize,
        concat!("Size of: ", stringify!(Message__bindgen_ty_1))
    );
    assert_eq!(
        ::core::mem::align_of::<Message__bindgen_ty_1>(),
        8usize,
        concat!("Alignment of ", stringify!(Message__bindgen_ty_1))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Message__bindgen_ty_1>())).KeyEvent as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Message__bindgen_ty_1),
            "::",
            stringify!(KeyEvent)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<Message__bindgen_ty_1>())).MouseEvent as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Message__bindgen_ty_1),
            "::",
            stringify!(MouseEvent)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<Message__bindgen_ty_1>())).PaintEvent as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Message__bindgen_ty_1),
            "::",
            stringify!(PaintEvent)
        )
    );
}
#[test]
fn bindgen_test_layout_Message() {
    assert_eq!(
        ::core::mem::size_of::<Message>(),
        40usize,
        concat!("Size of: ", stringify!(Message))
    );
    assert_eq!(
        ::core::mem::align_of::<Message>(),
        8usize,
        concat!("Alignment of ", stringify!(Message))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Message>())).Header as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Message),
            "::",
            stringify!(Header)
        )
    );
}
pub const WaitStatus_None: WaitStatus = 0;
pub const WaitStatus_Signaled: WaitStatus = 1;
pub const WaitStatus_Timeout: WaitStatus = 2;
pub const WaitStatus_Abandoned: WaitStatus = 3;
pub const WaitStatus_BrokenPipe: WaitStatus = 4;
pub type WaitStatus = c_types::c_int;
pub const MemoryAllocationType_Commit: MemoryAllocationType = 1;
pub const MemoryAllocationType_Reserve: MemoryAllocationType = 2;
pub const MemoryAllocationType_CommitReserve: MemoryAllocationType = 3;
pub type MemoryAllocationType = c_types::c_int;
pub const MemoryProtection_PageRead: MemoryProtection = 1;
pub const MemoryProtection_PageWrite: MemoryProtection = 2;
pub const MemoryProtection_PageExecute: MemoryProtection = 4;
pub const MemoryProtection_PageReadWrite: MemoryProtection = 3;
pub const MemoryProtection_PageReadExecute: MemoryProtection = 5;
pub const MemoryProtection_PageReadWriteExecute: MemoryProtection = 7;
pub type MemoryProtection = c_types::c_int;
pub const MaxModuleName: size_t = 16;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct Module {
    pub Address: *mut c_types::c_void,
    pub Name: [c_types::c_char; 16usize],
}
#[test]
fn bindgen_test_layout_Module() {
    assert_eq!(
        ::core::mem::size_of::<Module>(),
        24usize,
        concat!("Size of: ", stringify!(Module))
    );
    assert_eq!(
        ::core::mem::align_of::<Module>(),
        8usize,
        concat!("Alignment of ", stringify!(Module))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Module>())).Address as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(Module),
            "::",
            stringify!(Address)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<Module>())).Name as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(Module),
            "::",
            stringify!(Name)
        )
    );
}
pub const MaxLoadedModules: size_t = 8;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ProcessEnvironmentBlock {
    pub ProcessId: u32,
    pub BaseAddress: usize,
    pub LoadedModules: [Module; 8usize],
    pub ModuleIndex: size_t,
}
#[test]
fn bindgen_test_layout_ProcessEnvironmentBlock() {
    assert_eq!(
        ::core::mem::size_of::<ProcessEnvironmentBlock>(),
        216usize,
        concat!("Size of: ", stringify!(ProcessEnvironmentBlock))
    );
    assert_eq!(
        ::core::mem::align_of::<ProcessEnvironmentBlock>(),
        8usize,
        concat!("Alignment of ", stringify!(ProcessEnvironmentBlock))
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<ProcessEnvironmentBlock>())).ProcessId as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ProcessEnvironmentBlock),
            "::",
            stringify!(ProcessId)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<ProcessEnvironmentBlock>())).BaseAddress as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ProcessEnvironmentBlock),
            "::",
            stringify!(BaseAddress)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<ProcessEnvironmentBlock>())).LoadedModules as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ProcessEnvironmentBlock),
            "::",
            stringify!(LoadedModules)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<ProcessEnvironmentBlock>())).ModuleIndex as *const _ as usize
        },
        208usize,
        concat!(
            "Offset of field: ",
            stringify!(ProcessEnvironmentBlock),
            "::",
            stringify!(ModuleIndex)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ThreadEnvironmentBlock {
    pub SelfPointer: *mut ThreadEnvironmentBlock,
    pub PEB: *mut ProcessEnvironmentBlock,
    pub ThreadStart: ThreadStart,
    pub Handle: Handle,
    pub Arg: *mut c_types::c_void,
    pub ThreadId: u32,
    pub Error: u32,
}
#[test]
fn bindgen_test_layout_ThreadEnvironmentBlock() {
    assert_eq!(
        ::core::mem::size_of::<ThreadEnvironmentBlock>(),
        48usize,
        concat!("Size of: ", stringify!(ThreadEnvironmentBlock))
    );
    assert_eq!(
        ::core::mem::align_of::<ThreadEnvironmentBlock>(),
        8usize,
        concat!("Alignment of ", stringify!(ThreadEnvironmentBlock))
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<ThreadEnvironmentBlock>())).SelfPointer as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ThreadEnvironmentBlock),
            "::",
            stringify!(SelfPointer)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ThreadEnvironmentBlock>())).PEB as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ThreadEnvironmentBlock),
            "::",
            stringify!(PEB)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<ThreadEnvironmentBlock>())).ThreadStart as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(ThreadEnvironmentBlock),
            "::",
            stringify!(ThreadStart)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ThreadEnvironmentBlock>())).Handle as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(ThreadEnvironmentBlock),
            "::",
            stringify!(Handle)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ThreadEnvironmentBlock>())).Arg as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(ThreadEnvironmentBlock),
            "::",
            stringify!(Arg)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<ThreadEnvironmentBlock>())).ThreadId as *const _ as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(ThreadEnvironmentBlock),
            "::",
            stringify!(ThreadId)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<ThreadEnvironmentBlock>())).Error as *const _ as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(ThreadEnvironmentBlock),
            "::",
            stringify!(Error)
        )
    );
}
pub const FilePointerMove_Begin: FilePointerMove = 0;
pub const FilePointerMove_Current: FilePointerMove = 1;
pub const FilePointerMove_End: FilePointerMove = 2;
pub type FilePointerMove = c_types::c_int;
pub const SystemCallResult_Success: SystemCallResult = 0;
pub const SystemCallResult_InvalidPointer: SystemCallResult = 1;
pub const SystemCallResult_InvalidHandle: SystemCallResult = 2;
pub const SystemCallResult_InvalidObject: SystemCallResult = 3;
pub const SystemCallResult_BrokenPipe: SystemCallResult = 4;
pub const SystemCallResult_Failed: SystemCallResult = 5;
pub const SystemCallResult_NotImplemented: SystemCallResult = 6;
pub type SystemCallResult = c_types::c_int;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct CreateProcessArgs {
    pub StdInput: HFile,
    pub StdOutput: HFile,
    pub StdError: HFile,
}
